test/invalid-syntax/58250_invalid_syntax_missing_parentheses/58250_invalid_syntax_missing_parentheses.agu
-- Author: 58250, Leonardo Monteiro
let sum a, b : Int = a + b
